--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="button_cheat">تقلب</string>
     <string name="cheat_warning">آیا برای تقلب مطمئن هستید؟</string>
     <string name="button_back">بازگشت</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
